Because I like pretty.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962159 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/app/views/layouts/application.html.erb
+++ b/server/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <div id="doc" class="yui-t2">
       <div id="hd">
+        <%= link_to image_tag( "logo-wide.png" ), root_url %>
       <%= bread_crumb -%>
       </div>
       <div id="bd">
@@ -22,7 +23,7 @@
       </div>
       <div id="ft">
         <div style="float: right; text-align: right; font-size: 90%;">
-          Driver <%= DRIVER %><br/>
+          Driver: <%= DRIVER %><br/>
           Copyright 2009 <%= link_to 'Red Hat', 'http://redhat.com' %> <br />
         </div>
       </div>
