--- a/server/public/stylesheets/sass/application.sass
+++ b/server/public/stylesheets/sass/application.sass
@@ -12,7 +12,11 @@ body
     :color = #411
 
 #hd
+  :padding 1em
+  :background-image url('/images/topbar-bg.png')
   :margin-bottom 2em
+  img
+    :margin-bottom 1em
 
 #bd
   :margin-bottom 2em
@@ -53,6 +57,9 @@ body
 
 
 ul.breadcrumb 
+  :background-color #eee
+  :border 1px solid #46A
+  :padding 1ex
   li 
     :display inline
 
