--- a/server/public/stylesheets/application.css
+++ b/server/public/stylesheets/application.css
@@ -7,7 +7,11 @@ body {
     color: #441111; }
 
 #hd {
+  padding: 1em;
+  background-image: url('/images/topbar-bg.png');
   margin-bottom: 2em; }
+  #hd img {
+    margin-bottom: 1em; }
 
 #bd {
   margin-bottom: 2em; }
@@ -42,10 +46,14 @@ body {
 #bd em {
   font-style: italic; }
 
-ul.breadcrumb li {
-  display: inline; }
-  ul.breadcrumb li.subsequent:before {
-    content: " >> "; }
+ul.breadcrumb {
+  background-color: #eee;
+  border: 1px solid #46A;
+  padding: 1ex; }
+  ul.breadcrumb li {
+    display: inline; }
+    ul.breadcrumb li.subsequent:before {
+      content: " >> "; }
 
 table {
   width: 100%; }
