Integrate FSM picture.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962161 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/public/stylesheets/sass/application.sass
+++ b/server/public/stylesheets/sass/application.sass
@@ -101,3 +101,9 @@ input[type='radio']
   :margin-top 1ex
   :margin-left 1ex
   :margin-bottom 1ex
+
+#state_graph
+  :display block
+  :margin-bottom 2em
+  :text-align center
+  
