--- a/server/app/views/instance_states/show.html.erb
+++ b/server/app/views/instance_states/show.html.erb
@@ -1,6 +1,10 @@
 
 <h1>States</h1>
 
+<div id="state_graph">
+  <%= image_tag url_for( :format=>:png ) %>
+</div>
+
 <table class="states">
   <tr>
     <th>
@@ -46,3 +50,4 @@
     <% end %>
   <% end %>
 </table>
+
