Cleaning up, moving to compass, and starting hardware profiles.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962162 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/app/stylesheets/application.sass
+++ b/server/app/stylesheets/application.sass
@@ -1,3 +1,6 @@
+@import partials/base.sass
+@import screen
+
 !main_bg = #ffffff
 
 !th_bg = #cccccc
@@ -8,22 +11,30 @@ html
 
 body
   :font-family "Trebuchet MS"
+  :font-size 90%
   a
-    :color = #411
+    :color=  #6498c5 - #444
 
-#hd
+#wrapper
+  +container
+
+#header
   :padding 1em
   :background-image url('/images/topbar-bg.png')
-  :margin-bottom 2em
   img
     :margin-bottom 1em
 
-#bd
+#content
   :margin-bottom 2em
 
-#ft
+#footer
+  :border-top 1px solid #BBB
+  :padding-top 1ex
+  :text-align right
+  :color #BBB
+  :font-size 70%
 
-#bd
+#content
   h1
     :font-size     160%
     :margin-bottom 1ex
@@ -58,8 +69,12 @@ body
 
 ul.breadcrumb 
   :background-color #eee
-  :border 1px solid #46A
+  :border 1px solid #6498c5
   :padding 1ex
+  :font-size 90%
+  :margin-bottom 1em
+  a
+    :text-decoration none
   li 
     :display inline
 
@@ -82,6 +97,11 @@ table.states
     :border-bottom = 1px solid !th_bg - #111
   th, td
     :vertical-align top
+
+table
+  tr
+    td
+      :border-bottom 1px solid white
 
 .radio-group
   :font-size 90%
