--- a/server/app/views/layouts/old.html.erb
+++ b/server/app/views/layouts/old.html.erb
@@ -24,7 +24,7 @@
       <div id="ft">
         <div style="float: right; text-align: right; font-size: 90%;">
           Driver: <%= DRIVER %><br/>
-          Copyright 2009 <%= link_to 'Red Hat', 'http://redhat.com' %> <br />
+          Copyright 2009 <%= link_to 'Red Hat', 'http://redhat.com' %> and individual contributors.<br />
         </div>
       </div>
     </div>
