- Replaced ERB views with HAML - Changed year in copyright (application.html.haml)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962172 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/app/views/hardware_profiles/index.html.haml
+++ b/server/libexec/app/views/hardware_profiles/index.html.haml
@@ -1,27 +1,30 @@
 %h1
   Hardware Profiles
  
-%table
-  %tr
-    %th
-      Name
-    %th
-      Architecture
-    %th
-      Memory
-    %th
-      Storage
-    %th
-      Mutable
-  - for profile in @profiles
+%table.display
+  %thead
     %tr
-      %td
-        = link_to profile.name, hardware_profile_url( profile.name )
-      %td
-        = profile.architecture
-      %td
-        = format_hardware_aspect profile.memory
-      %td
-        = format_hardware_aspect profile.storage
-      %td
-        = profile.mutable?
+      %th
+        Name
+      %th
+        Architecture
+      %th
+        Memory
+      %th
+        Storage
+      %th
+        Mutable
+  %tbody
+    - for profile in @profiles
+      %tr
+        %td
+          = link_to profile.name, hardware_profile_url( profile.name )
+        %td
+          = profile.architecture
+        %td
+          = format_hardware_aspect profile.memory
+        %td
+          = format_hardware_aspect profile.storage
+        %td
+          = profile.mutable?
+
