--- a/server/libexec/app/views/layouts/application.html.haml
+++ b/server/libexec/app/views/layouts/application.html.haml
@@ -19,6 +19,8 @@
         #driver_info
           Driver: #{DRIVER}
         #copyright
-          Copyright 2009 #{link_to 'Red Hat', 'http://redhat.com'} and individual contributors.
+          Copyright 
+          = Time.now.year
+          #{link_to 'Red Hat', 'http://redhat.com'} and individual contributors.
       
   
