Fixed copyright, missing tr and images in show account
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962173 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/app/views/accounts/show.html.haml
+++ b/server/libexec/app/views/accounts/show.html.haml
@@ -12,3 +12,19 @@
       %tr
         %td
           = link_to instance_id, instance_url( instance_id )
+
+%h2 Images
+
+%table
+  %thead
+    %tr
+      %th Image ID
+      %th Description
+  %tbody
+    %tbody
+      - @images.each do |image|
+        %tr
+          %td
+            = link_to image[:id], image_url( image[:id] )
+          %td
+            = image[:description]
