--- a/server/libexec/app/views/instances/index.html.haml
+++ b/server/libexec/app/views/instances/index.html.haml
@@ -23,9 +23,9 @@
         %td
           = link_to instance.image_id, image_url( instance.image_id )
         %td
-          = instance.flavor_id ? link_to(instance.flavor_id, flavor_url(instance.flavor_url)) : default
+          = instance.flavor_id ? link_to(instance.flavor_id, flavor_url(instance.flavor_url)) : 'default'
         %td 
-          = instance.realm_id ? link_to(instance.realm_id, realm_url( instance.realm_id )) : default
+          = instance.realm_id ? link_to(instance.realm_id, realm_url( instance.realm_id )) : 'default'
         %td
           = instance.state
         %td
