--- a/server/libexec/app/views/layouts/application.html.haml
+++ b/server/libexec/app/views/layouts/application.html.haml
@@ -19,8 +19,7 @@
         #driver_info
           Driver: #{DRIVER}
         #copyright
-          Copyright 
-          = Time.now.year
+          Copyright 2009, 2010
           #{link_to 'Red Hat', 'http://redhat.com'} and individual contributors.
       
   
