* view/instances: fix a few typos
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962187 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/views/instances/index.html.haml
+++ b/server/libexec/views/instances/index.html.haml
@@ -14,20 +14,19 @@
   %tbody
     - @instances.each do |instance|
       %tr
-        %td 
+        %td
           = link_to instance.id, instance_url( instance.id )
-        %td 
+        %td
           = link_to instance.owner_id, images_url( instance.owner_id )
         %td
           = instance.name
         %td
           = link_to instance.image_id, image_url( instance.image_id )
         %td
-          = instance.flavor_id ? link_to(instance.flavor_id, flavor_url(instance.flavor_url)) : 'default'
-        %td 
+          = instance.flavor_id ? link_to(instance.flavor_id, flavor_url(instance.flavor_id)) : 'default'
+        %td
           = instance.realm_id ? link_to(instance.realm_id, realm_url( instance.realm_id )) : 'default'
         %td
           = instance.state
         %td
           = instance.actions.collect { |a| link_to(a, self.send("#{a}_instance_url", instance.id), :method => :post)}.join(' ')
-
