* views/layout.html.haml: fix links to stylesheets/images for Sinatra
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962195 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/views/layout.html.haml
+++ b/server/libexec/views/layout.html.haml
@@ -3,16 +3,16 @@
 
 %html
   %head
-    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
+    = stylesheet_link_tag '/stylesheets/compiled/screen.css', :media => 'screen, projection'
+    = stylesheet_link_tag '/stylesheets/compiled/print.css', :media => 'print'
     /[if lt IE 8]
-      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'compiled/application.css', :media => 'screen, projection'
+      = stylesheet_link_tag '/stylesheets/compiled/ie.css', :media => 'screen, projection'
+    = stylesheet_link_tag '/stylesheets/compiled/application.css', :media => 'screen, projection'
   %body
     #wrapper
       #header
-        = link_to image_tag( "logo-wide.png" ), root_url
-      = bread_crumb 
+        = link_to image_tag( "/images/logo-wide.png" ), root_url
+      = bread_crumb
       #content
         = yield
       #footer
@@ -21,5 +21,3 @@
         #copyright
           Copyright 2009, 2010
           #{link_to 'Red Hat', 'http://redhat.com'} and individual contributors.
-      
-  
