* lib/sinatra/rabbit.rb: extension for restful routing with validation
Also generates API documentation at /api/docs

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962197 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/public/stylesheets/compiled/application.css
+++ b/server/libexec/public/stylesheets/compiled/application.css
@@ -607,3 +607,7 @@ input[type='radio'] {
   display: block;
   margin-bottom: 2em;
   text-align: center; }
+
+table.docs { border : 1px solid #ccc }
+table.docs td { border : 1px solid #ccc }
+table.docs table td { border : none }
