--- a/server/libexec/views/storage_snapshots/show.html.haml
+++ b/server/libexec/views/storage_snapshots/show.html.haml
@@ -1,14 +1,14 @@
 %h1
-  = @snapshot.id
+  = @storage_snapshot.id
 
 %dl
   %di
     %dt Volume
     %dd
-      = @snapshot.storage_volume_id
+      = @storage_snapshot.storage_volume_id
     %dt Created
     %dd
-      = @snapshot.created
+      = @storage_snapshot.created
     %dt State
     %dd
-      = @snapshot.state
+      = @storage_snapshot.state
