--- a/server/libexec/views/instance_states/show.html.haml
+++ b/server/libexec/views/instance_states/show.html.haml
@@ -1,7 +1,7 @@
 %h1 Instance States
 
 %div#state_graph
-  = image_tag url_for( :format => :png )
+  = image_tag url_for( '/api/instance_states.png' )
 
 %table.states
   %thead
