--- a/server/libexec/views/instances/show.html.haml
+++ b/server/libexec/views/instances/show.html.haml
@@ -37,5 +37,4 @@
   %di
     %dt
     %dd
-      = @instance.actions.collect { |action| link_to(action, send("#{action}_instance_url", @instance.id, :method => :post))}.join("&nbsp;")
-
+      = @instance.actions.collect { |action| link_to(action, "/api/instances/#{@instance.id}/#{action}") }.join("&nbsp;")
