Factor validation and parameters into a separate module
Also fixes a bug where parameters with a fixed set of values were never
validated against those values. The issue was a naming problem in
Operation.control in rabbit.rb

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962229 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/views/error.xml.haml
+++ b/server/libexec/views/error.xml.haml
@@ -1,7 +1,7 @@
 %error{:url => "#{request.env['REQUEST_URI']}"}
   %parameter #{@error.name}
-  %msg #{@error.msg}
-  - unless @error.spec[:options].empty?
+  %message #{@error.message}
+  - unless @error.param.options.empty?
     %valid_options
-      - @error.spec[:options].each do |v|
+      - @error.param.options.each do |v|
         %value #{v}
