--- a/server/libexec/views/docs/collection.xml.haml
+++ b/server/libexec/views/docs/collection.xml.haml
@@ -5,10 +5,10 @@
       - @operations.keys.sort_by { |k| k.to_s }.each do |operation|
         %operation{:url => "/api/#{@collection.name.to_s}", :name => "#{operation}", :href => "#{@operations[operation].path}", :method => "#{@operations[operation].method}"}
           %description #{@operations[operation].description}
-          - @operations[operation].params.each_key do |p|
-            %parameter{:name => "#{p}", :type => "#{@operations[operation].params[p][:type]}"}
-              %class #{@operations[operation].params[p][:class]}
-              - unless @operations[operation].params[p][:options].empty?
+          - @operations[operation].each_param do |param|
+            %parameter{:name => "#{param.name}", :type => "#{param.type}"}
+              %class #{param.klass}
+              - unless param.options.empty?
                 %values
-                  - @operations[operation].params[p][:options].each do |v|
+                  - param.options.each do |v|
                     %value #{v}
