--- a/server/libexec/views/docs/operation.html.haml
+++ b/server/libexec/views/docs/operation.html.haml
@@ -22,10 +22,10 @@
       %th Class
       %th Valid values
   %tbody
-    - @operation.params.each_key do |p|
+    - @operation.each_param do |p|
       %tr
         %td{:style => "width:15em"}
-          %em #{p}
-        %td{:style => "width:10em"} #{@operation.params[p][:type]}
-        %td #{@operation.params[p][:class]}
-        %td{:style => "width:10em"} #{@operation.params[p][:options].join(',')}
+          %em #{p.name}
+        %td{:style => "width:10em"} #{p.type}
+        %td #{p.klass}
+        %td{:style => "width:10em"} #{p.options.join(',')}
