--- a/server/libexec/views/api/show.xml.haml
+++ b/server/libexec/views/api/show.xml.haml
@@ -1,3 +1,5 @@
 %api{ :version=>@version, :driver=>DRIVER }
   - for entry_point in entry_points
     %link{ :rel=>entry_point[0], :href=>entry_point[1] }
+      - for feature in driver.features(entry_point[0])
+        %feature{ :name=>feature.name }
