Add params enabled by features to operations
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962232 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/libexec/views/docs/collection.html.haml
+++ b/server/libexec/views/docs/collection.html.haml
@@ -18,3 +18,20 @@
         %td{:style => "width:15em"}
           %a{:href => "/api/docs/#{@collection.name.to_s}/#{operation}"} #{operation}
         %td{:style => "width:10em"} #{@operations[operation].description}
+
+%h3 Features:
+
+%table
+  %thead
+    %tr
+      %th Name
+      %th Description
+      %th Modified Operations
+  %tbody
+    - @features.sort_by { |f| f.name.to_s }.each do |feature|
+      %tr
+        %td= feature.name
+        %td= feature.description
+        %td
+          - feature.operations.each do |op|
+            %a{:href => "/api/docs/#{@collection.name.to_s}/#{op.name}"} #{op.name}
