Error handling: changes for validation failures
  * add pretty HTML output
  * error.xml.haml into a errors/ subdirectory
  * add a status attribute to the XML error

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962246 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/errors/validation_failure.xml.haml
+++ b/server/views/errors/validation_failure.xml.haml
@@ -1,4 +1,4 @@
-%error{:url => "#{request.env['REQUEST_URI']}"}
+%error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
   %parameter #{@error.name}
   %message #{@error.message}
   - unless @error.param.options.empty?
