Hardware profiles: slight revamp to make XML generation easier
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962277 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/hardware_profiles/index.html.haml
+++ b/server/views/hardware_profiles/index.html.haml
@@ -20,10 +20,10 @@
         %td
           = link_to profile.name, hardware_profile_url( profile.name )
         %td
-          = profile.architecture
+          = format_hardware_property profile.architecture
         %td
-          = format_hardware_aspect profile.memory
+          = format_hardware_property profile.memory
         %td
-          = format_hardware_aspect profile.storage
+          = format_hardware_property profile.storage
         %td
           = profile.mutable?
