--- a/server/views/instances/show.html.haml
+++ b/server/views/instances/show.html.haml
@@ -19,6 +19,12 @@
     %dd
       = @instance.flavor_id ? link_to(@instance.flavor_id, flavor_url(@instance.flavor_id)) : 'default'
   %di
+    %dt Hardware Profile
+    %dd
+      - prof = @instance.instance_profile
+      = link_to(prof.name, hardware_profile_url(prof.name))
+      = format_instance_profile(prof)
+  %di
     %dt Realm
     %dd
       = @instance.realm_id ? link_to(@instance.realm_id, realm_url(@instance.realm_id)) : 'default'
