--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -16,8 +16,8 @@
     - @instance.instance_profile.overrides.each do |p, v|
       %property{:kind => 'fixed', :name => p, :value => v, :unit => Deltacloud::HardwareProfile::unit(p)}
   %actions
-    - @instance.actions.compact.each do |action|
-      %link{:rel => action, :href => self.send("#{action}_instance_url", action.id)}
+    - @instance.actions.compact.each do |instance_action|
+      %link{:rel => instance_action, :href => self.send("#{instance_action}_instance_url", @instance.id)}
   - haml_tag :"public-addresses" do
     - @instance.public_addresses.each do |address|
       %address<
