--- a/server/views/instances/index.xml.haml
+++ b/server/views/instances/index.xml.haml
@@ -14,10 +14,10 @@
           %property{:kind => 'fixed', :name => p, :value => v, :unit => Deltacloud::HardwareProfile::unit(p)}
       %actions
         - instance.actions.compact.each do |action|
-          %link{:rel => action, :href => self.send("#{action}_instance_url", instance.id)}
-      - haml_tag :"public-addresses" do
+          %link{:rel => action, :href => self.send("#{action}_instance_url", instance.id), :method => instance_action_method(action)}
+      %public-addresses
         - instance.public_addresses.each do |address|
           %address  #{address}
-      - haml_tag :"private-addresses" do
+      %private-addresses
         - instance.private_addresses.each do |address|
           %address  #{address}
