--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -17,12 +17,12 @@
       %property{:kind => 'fixed', :name => p, :value => v, :unit => Deltacloud::HardwareProfile::unit(p)}
   %actions
     - @instance.actions.compact.each do |instance_action|
-      %link{:rel => instance_action, :href => self.send("#{instance_action}_instance_url", @instance.id)}
-  - haml_tag :"public-addresses" do
+      %link{:rel => instance_action, :method => instance_action_method(instance_action), :href => self.send("#{instance_action}_instance_url", @instance.id)}
+  %public-addresses
     - @instance.public_addresses.each do |address|
       %address<
         =address
-  - haml_tag :"private-addresses" do
+  %private-addresses
     - @instance.private_addresses.each do |address|
       %address<
         =address
