Fix two instances of auth_error -> authn_error.
Signed-off-by: Chris Lalancette <clalance@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962325 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -29,7 +29,7 @@
   - if driver_has_auth_features?
     %authentication{ :type => driver_auth_feature_name }
       - if @instance.authn_feature_failed?
-        %error  #{@instance.auth_error}
+        %error  #{@instance.authn_error}
       - else
         - if driver_auth_feature_name == 'password'
           %login
