Added JQuery wrapper for POST and DELETE actions
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962334 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.html.haml
+++ b/server/views/instances/show.html.haml
@@ -39,4 +39,5 @@
   %di
     %dt
     %dd
-      = @instance.actions.collect { |action| link_to(action, "/api/instances/#{@instance.id}/#{action}") }.join("&nbsp;")
+      -@instance.actions.each do |action|
+        =link_to action, self.send(:"#{action}_instance_url", @instance.id), :class => instance_action_method(action)
