--- a/server/views/instances/index.html.haml
+++ b/server/views/instances/index.html.haml
@@ -26,4 +26,5 @@
         %td
           = instance.state
         %td
-          = instance.actions.collect { |a| link_to(a, self.send("#{a}_instance_url", instance.id), :method => :post)}.join(' ')
+          -instance.actions.each do |action|
+            =link_to action, self.send(:"#{action}_instance_url", instance.id), :class => instance_action_method(action)
