Grab instance launch time when available - only EC2 and Rimuhosting
definition of the launch_time attribute is now placed in the Instance class itself (rather than in a given driver that wishes to use it).

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962349 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -26,6 +26,9 @@
     - @instance.private_addresses.each do |address|
       %address<
         =address
+  - unless @instance.launch_time.nil?
+    %launch-time<
+      =@instance.launch_time
   - if driver_has_auth_features?
     %authentication{ :type => driver_auth_feature_name }
       - if @instance.authn_feature_failed?
