Replaced ID element with ID attribute for all models
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962357 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/hardware_profiles/index.xml.haml
+++ b/server/views/hardware_profiles/index.xml.haml
@@ -1,4 +1,4 @@
 !!! XML
-%hardware-profiles
+%hardware_profiles
   - @profiles.each do |prof|
     = haml :'hardware_profiles/show', :locals => { :@profile => prof, :partial => true }
