--- a/server/views/realms/index.xml.haml
+++ b/server/views/realms/index.xml.haml
@@ -1,9 +1,7 @@
 !!!XML
 %realms
   - @elements.each do |realm|
-    %realm{:href => realm_url(realm.id)}
-      %id<
-        =realm.id
+    %realm{:href => realm_url(realm.id), :id => realm.id }
       %name<
         =realm.name
       %state<
