--- a/server/views/realms/show.xml.haml
+++ b/server/views/realms/show.xml.haml
@@ -1,10 +1,9 @@
 !!!XML
-%realm{:href => realm_url(@realm.id)}
-  %id<
-    =@realm.id
+%realm{:href => realm_url(@realm.id), :id => @realm.id }
   %name<
     =@realm.name
   %state<
     =@realm.state
-  %limit<
-    =@realm.limit.eql?(:unlimited) ? '' : @realm.limit
+  - unless @realm.limit.eql?(:unlimited)
+    %limit<
+      =@realm.limit
