--- a/server/views/hardware_profiles/show.xml.haml
+++ b/server/views/hardware_profiles/show.xml.haml
@@ -1,7 +1,6 @@
 - unless defined?(partial)
   !!! XML
-%hardware-profile{ :href => hardware_profile_url(@profile.name) }
-  %id= @profile.name
+%hardware_profile{ :href => hardware_profile_url(@profile.name), :id => @profile.name }
   - @profile.each_property do |prop|
     - attr = { :name => prop.name, :kind => prop.kind, :unit => prop.unit }
     - if prop.kind == :fixed
