--- a/server/views/images/index.xml.haml
+++ b/server/views/images/index.xml.haml
@@ -1,7 +1,8 @@
 !!! XML
 %images
   - @elements.each do |image|
-    %image{:href => image_url(image.id)}
-      - image.attributes.each do |attribute|
-        - haml_tag(attribute, :<) do
+    %image{:href => image_url(image.id), :id => image.id}
+      - image.attributes.select{ |attr| attr!=:id }.each do |attribute|
+        - haml_tag("#{attribute}".tr('-', '_'), :<) do
           - haml_concat image.send(attribute)
+
