--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -1,5 +1,5 @@
 !!! XML
-%image{:href => image_url(@image.id)}
-  - @image.attributes.each do |attribute|
+%image{:href => image_url(@image.id), :id => @image.id}
+  - @image.attributes.select{ |attr| attr!=:id }.each do |attribute|
     - haml_tag(attribute, :<) do
       - haml_concat @image.send(attribute)
