--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -1,34 +1,27 @@
 !!! XML
-%instance{:href => instance_url(@instance.id)}
-  %id<
-    =@instance.id
+%instance{:href => instance_url(@instance.id), :id => @instance.id}
   %name<
     =@instance.name
   %owner_id<
     =@instance.owner_id
-  %image{:href => image_url(@instance.image_id)}
-  %realm{:href => realm_url(@instance.realm_id)}
+  %image{:href => image_url(@instance.image_id), :id => @instance.image_id }
+  %realm{:href => realm_url(@instance.realm_id), :id => @instance.realm_id }
   %state<
     =@instance.state
-  - haml_tag :"hardware-profile", {:href => hardware_profile_url(@instance.instance_profile.id)} do
-    %id<
-      =@instance.instance_profile.id
+  - haml_tag :"hardware_profile", {:id => @instance.instance_profile.id, :href => hardware_profile_url(@instance.instance_profile.id)} do
     - @instance.instance_profile.overrides.each do |p, v|
       %property{:kind => 'fixed', :name => p, :value => v, :unit => Deltacloud::HardwareProfile::unit(p)}
   %actions
     - @instance.actions.compact.each do |instance_action|
       %link{:rel => instance_action, :method => instance_action_method(instance_action), :href => self.send("#{instance_action}_instance_url", @instance.id)}
-  %public-addresses
+  %public_addresses
     - @instance.public_addresses.each do |address|
       %address<
         =address
-  %private-addresses
+  %private_addresses
     - @instance.private_addresses.each do |address|
       %address<
         =address
-  - unless @instance.launch_time.nil?
-    %launch-time<
-      =@instance.launch_time
   - if driver_has_auth_features?
     %authentication{ :type => driver_auth_feature_name }
       - if @instance.authn_feature_failed?
