--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -1,5 +1,5 @@
 !!!XML
-%storage-volume{ :href => storage_volume_url(@storage_volume.id)}
+%storage_volume{ :href => storage_volume_url(@storage_volume.id)}
   %id<
     =@storage_volume.id
   %created<
@@ -10,4 +10,4 @@
     =@storage_volume.device
   %state<
     =@storage_volume.state
-  %instance{:href => @storage_volume.instance_id}
+  %instance{:href => @storage_volume.instance_id, :id => @storage_volume.instance_id}
