Cucumber feature fixes regarding to API changes (ID, -/_)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962362 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -14,6 +14,9 @@
   %actions
     - @instance.actions.compact.each do |instance_action|
       %link{:rel => instance_action, :method => instance_action_method(instance_action), :href => self.send("#{instance_action}_instance_url", @instance.id)}
+  - if @instance.instance_variables.include?("@launch_time")
+    %launch_time<
+      =@instance.launch_time
   %public_addresses
     - @instance.public_addresses.each do |address|
       %address<
