--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -1,7 +1,5 @@
 !!!XML
-%storage_volume{ :href => storage_volume_url(@storage_volume.id)}
-  %id<
-    =@storage_volume.id
+%storage_volume{ :href => storage_volume_url(@storage_volume.id), :id => @storage_volume.id}
   %created<
     =@storage_volume.created
   %capacity<
