Added name to Hardware Profile
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962363 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/hardware_profiles/show.xml.haml
+++ b/server/views/hardware_profiles/show.xml.haml
@@ -1,6 +1,8 @@
 - unless defined?(partial)
   !!! XML
 %hardware_profile{ :href => hardware_profile_url(@profile.name), :id => @profile.name }
+  %name<
+    =@profile.name
   - @profile.each_property do |prop|
     - attr = { :name => prop.name, :kind => prop.kind, :unit => prop.unit }
     - if prop.kind == :fixed
