--- a/server/views/images/index.html.haml
+++ b/server/views/images/index.html.haml
@@ -22,7 +22,7 @@
         %td
           = image.name
         %td
-          = link_to image.owner_id, images_url( :owner_id => image.owner_id )
+          = link_to image.owner_id, images_url
         %td
           = image.architecture
         %td
