--- a/server/views/instances/index.html.haml
+++ b/server/views/instances/index.html.haml
@@ -16,7 +16,7 @@
         %td
           = link_to instance.id, instance_url( instance.id )
         %td
-          = link_to instance.owner_id, images_url( instance.owner_id )
+          = link_to instance.owner_id, images_url
         %td
           = instance.name
         %td
