--- a/server/views/keys/new.html.haml
+++ b/server/views/keys/new.html.haml
@@ -1,6 +1,6 @@
-%h1 New Keypair
+%h1 New key
 
-%form{ :action => '/api/instance_credentials', :method => :post }
+%form{ :action => '/api/keys', :method => :post }
   %p
     %label
       Name:
