--- a/server/views/docs/index.xml.haml
+++ b/server/views/docs/index.xml.haml
@@ -1,5 +1,5 @@
 %docs{:status => "unsupported"}
   - collections.keys.sort_by { |k| k.to_s }.each do |collection|
-    %collection{:url => "/api/docs/#{collection}"}
+    %collection{:url => url_for("/api/docs/#{collection}")}
       %name #{collection}
       %description  #{collections[collection].description}
