--- a/server/views/layout.html.haml
+++ b/server/views/layout.html.haml
@@ -22,4 +22,5 @@
           Driver: #{DRIVER}
         #copyright
           Copyright 2009, 2010
-          #{link_to 'Red Hat', 'http://redhat.com'} and individual contributors.
+          %a{:href => 'http://redhat.com'} Red Hat
+          and individual contributors.
