--> minor fixes in haml for consistency (showing blobs and links to them when viewing buckets - index and show). --> remove hack in respond_to for content negotiation
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1000442 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/buckets/index.xml.haml
+++ b/server/views/buckets/index.xml.haml
@@ -3,5 +3,8 @@
   - @elements.each do |bucket|
     %bucket{:href => bucket_url(bucket.id), :id => bucket.id}
       - bucket.attributes.select{ |attr| attr!=:id }.each do |attribute|
-        - haml_tag("#{attribute}".tr('-', '_'), :<) do
-          - haml_concat bucket.send(attribute)
+        - unless attribute == :blob_list
+          - haml_tag("#{attribute}".tr('-', '_'), :<) do
+            - haml_concat bucket.send(attribute)
+      - bucket.blob_list.each do |blb|
+        %blob{ :id => blb, :href => bucket_url(bucket.id) +"/#{blb}"}
