--- a/server/views/buckets/show.xml.haml
+++ b/server/views/buckets/show.xml.haml
@@ -5,4 +5,4 @@
       -haml_tag(attribute, :<) do
         - haml_concat @bucket.send(attribute)
   - @bucket.blob_list.each do |blb|
-    %blob{:href => bucket_url(@bucket.id + blb), :id => blb}
+    %blob{:id => blb, :href => bucket_url(@bucket.id) +"/#{blb}"}
