Removed .png from instance_states diagram
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1003013 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instance_states/show.html.haml
+++ b/server/views/instance_states/show.html.haml
@@ -1,7 +1,7 @@
 %h1 Instance States
 
 %div#state_graph
-  = image_tag url_for( '/api/instance_states.png' )
+  = image_tag url_for( '/api/instance_states?format=png' )
 
 %table.states
   %thead
