Fixed PEM key format in Keys
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1024246 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/keys/show.xml.haml
+++ b/server/views/keys/show.xml.haml
@@ -8,9 +8,8 @@
     %fingerprint<
       =@key.fingerprint
     - unless @key.pem_rsa_key.nil?
-      %pem<
-        =cdata do
-          =@key.pem_rsa_key
+      %pem
+        ~render_cdata(@key.pem_rsa_key)
   - if @key.is_password?
     %username<
       =cdata do
