--- a/site/deltacloud.org/content/drivers.haml
+++ b/site/deltacloud.org/content/drivers.haml
@@ -5,7 +5,7 @@ extension: html
 filter:
   - haml
 ---
-- page = render(:partial => "external", :locals => { :path => '../docs/drivers.mdown' })
+- page = render(:partial => "external", :locals => { :path => 'content/_drivers.mdown' })
 - header, rest = page.split("<table providers></table>")
 
 = header
