site: remove unneeded/duplicated stuff, move rest into deltacloud.org/misc
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1027308 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/deltacloud.org/content/contribute.haml
+++ b/site/deltacloud.org/content/contribute.haml
@@ -45,4 +45,4 @@ filter:
       [4]: http://kernel.org/pub/software/scm/git/docs/git-format-patch.html
       [5]: http://kernel.org/pub/software/scm/git/docs/git-send-email.html
 
-= render(:partial => "markdown", :locals => {:path => '../README'} )
+= render(:partial => "markdown", :locals => {:path => 'README'} )
