Storage volumes/snapshots: massage a little
Some minor changes to storage volumes/snapshots, mostly with a view of not
exposing things we might not be able to support:

  - include a unit in the capacity of a volume

  - put the instance/device pair at which a volume might be mounted into a
    <mount/> element, in case we ever need to talk about add'l instances in
    connection with a volume

  - do not report a state for snapshots and volumes; those need to be
    normalized first

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1028865 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/index.xml.haml
+++ b/server/views/storage_volumes/index.xml.haml
@@ -4,10 +4,10 @@
     %storage_volume{ :href => storage_volume_url(volume.id), :id => volume.id }
       %created<
         =volume.created
-      %capacity<
-        =volume.capacity
-      - unless volume.device.nil?
-        %device<
-          =volume.device
+      %capacity{ :unit => "GB" }<
+        = volume.capacity
       - unless volume.instance_id.nil?
-        %instance{:href => instance_url(volume.instance_id), :id => volume.instance_id}
+        %mount
+          %instance{:href => instance_url(volume.instance_id), :id => volume.instance_id}
+          - unless volume.device.nil?
+            %device{ :name => volume.device }
