--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -2,10 +2,10 @@
 %storage_volume{ :href => storage_volume_url(@storage_volume.id), :id => @storage_volume.id}
   %created<
     =@storage_volume.created
-  %capacity<
-    =@storage_volume.capacity
-  %device<
-    =@storage_volume.device
-  %state<
-    =@storage_volume.state
-  %instance{:href => @storage_volume.instance_id, :id => @storage_volume.instance_id}
+  %capacity{ :unit => "GB" }<
+    = @storage_volume.capacity
+  - unless @storage_volume.instance_id.nil?
+    %mount
+      %instance{:href => @storage_volume.instance_id, :id => @storage_volume.instance_id}
+      - unless @storage_volume.device.nil?
+        %device{ :name => @storage_volume.device }
